--- a/style.css
+++ b/style.css
@@ -186,3 +186,20 @@ h1, h2 {
 #action-menu button:hover, #item-action-menu button:hover {
   background-color: #1976D2; /* 濃い青 */
 }
+
+#menu-overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.5);
+  z-index: 50;
+}
+
+#menu-overlay.hidden {
+  display: none;
+}
+
+
+
